--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -4,4 +4,4 @@ slug: "about"
 cover: "./mountains.jpg"
 ---
 
-Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands.
+We have celebrated so many holidays, milestones, moves, learning experiences, and too many laughs to count. Together with our family and friends we truly grew up together and it is hard to remember a time without the other by our side. I am so proud of the things we were able to accomplish as each other’s best support system, collaborators, adventurers, and partners in crime. There is never a boring day. We are a couple of weirdos and we wouldn’t have it any other way.
