--- a/content/projects/lisbon/index.mdx
+++ b/content/projects/lisbon/index.mdx
@@ -3,16 +3,16 @@ client: "Lisbon"
 title: "Lisbon - Oh my cod!"
 cover: "./flowers.JPEG"
 date: "2019-05-29"
-service: "Tiles"
+service: "May 30 - June 02"
 color: "#35477d"
 ---
 
 ## Description
 
 Hi!
-I hope you enjoy our travel experiences logged here. We certainly enjoyed the experiences and are excited to share with you. 
+I hope you enjoy our travels logged here. First stop was an adorable apartment within a 17th century palace in Alfama. ![](./alfama.JPEG)
 
-While in Lisbon, several places are worth mentioning for food and beverage. 
+We loved the location and the neighborhood experience and are excited to share with you. While in Lisbon, these places stand out as exceptional in their area of expertise for food and beverage. 
 
 1. [Prado](https://goo.gl/maps/tUWA9eDKGNgB3dXq9).
 2. [Clube Do Bacalhau](https://www.clubedobacalhau.com/)
