--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -4,4 +4,4 @@ slug: "about"
 cover: "./mountains.jpg"
 ---
 
-We have celebrated so many holidays, milestones, moves, learning experiences, and too many laughs to count. Together with our family and friends we truly grew up together and it is hard to remember a time without the other by our side. I am so proud of the things we were able to accomplish as each other’s best support system, collaborators, adventurers, and partners in crime. There is never a boring day. We are a couple of weirdos and we wouldn’t have it any other way.
+We have celebrated so many holidays, milestones, moves, learning experiences, and too many laughs to count. Together with our family and friends we truly grew up together and it is hard to remember a time without the other by our side. I am so proud what we have accomplished together as collaborators, adventurers, and partners in crime. There is never a boring day. We are a couple of weirdos and we wouldn not have it any other way.
