--- a/content/projects/barcelona/index.mdx
+++ b/content/projects/barcelona/index.mdx
@@ -7,7 +7,7 @@ service: "June 01 - June 04 | June 09 - June 12"
 color: "#35477d"
 ---
 
-## Description
+## Barcelona
 
 We stayed in Barcelona twice, taking a 5 day break off in the middle off the coast in Mallorca. Both accomodations were in Eixample, Negresco Princess then later an apartment near Universitat de Barcelona, but their proximity to both the beach and must see destination Sagrada Familia gave us a chance to make the city home for our visit.  
 ![](./windows.JPG) 
