--- a/content/projects/lisbon/index.mdx
+++ b/content/projects/lisbon/index.mdx
@@ -1,29 +1,46 @@
 ---
 client: "Lisbon"
-title: "Lisbon - Oh my cod!"
+title: "Lisbon"
 cover: "./flowers.JPEG"
 date: "2019-05-29"
 service: "May 30 - June 02"
 color: "#35477d"
 ---
 
-## Description
+## Lisbon
 
-Hi!
-I hope you enjoy our travels logged here. First stop was an adorable apartment within a 17th century palace in Alfama. ![](./alfama.JPEG)
+Hi! I hope you enjoy our travels logged here. First stop was an adorable apartment within a 17th century palace in Alfama. ![](./alfama.jpg)
 
-We loved the location and the neighborhood experience and are excited to share with you. While in Lisbon, these places stand out as exceptional in their area of expertise for food and beverage. 
+![](./room.jpg)
+
+We loved the location, the neighborhood experience and we are excited to share with you. While in Lisbon, these places stood out as exceptional. 
 
 1. [Prado](https://goo.gl/maps/tUWA9eDKGNgB3dXq9).
 2. [Clube Do Bacalhau](https://www.clubedobacalhau.com/)
 3. [Pensao Amor](https://goo.gl/maps/bqjxCtWbrCX2VHXN6)
-![](./drinks.JPEG)
+
+![](./drinks2.jpg)
+
 ## Here are some photos of our time in Lisbon.
 
 ![](./door.JPEG)
+
 ![](./street.JPEG)
+
 ![](./tiles.JPEG)
+
 ![](./wall.JPEG)
+
+![](./paint.jpg)
+
 ![](./tower.JPEG)
+
+![](./trolley.JPG)
+
 ![](./doorway.JPEG)
+
+![](./party.jpg)
+
 ![](./flowers.JPEG)
+
+![](./vibe.jpg)
